update readme, recalculate standings